--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,10 +7,9 @@ header {
   justify-content: space-between; /* Distribute space between items */
   align-items: center; /* Center items vertically */
   width: 90%; /* Ensure the header takes up the full width */
-  padding: 0 2vh; /* Optional: Add padding to the left and right */
   }
   a {
-    padding-right: 9vh;
+    padding-right: 3vh;
     text-decoration: none;
     color: black;
   }
